[package]
name = "test-secrets-ark"
version = "0.1.0"
edition = "2021"
description = "Test WASM for OutLayer secrets via environment variables"

[[bin]]
name = "test-secrets-ark"
path = "src/main.rs"

[dependencies]
# For external projects after publishing: outlayer = { git = "https://github.com/fastnear/near-offshore" }
outlayer = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
strip = true
